--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,151 +1,34 @@
+/* All files */
 * {
-  box-sizing: border-box;
-}
-
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh; 
-  margin: 0; 
-  font-family: Arial, sans-serif; 
-}
-
-/* Main Todo Container */
-.todo-container {
-  background: white; 
-  padding: 20px; 
-  margin: 1vh;
-  border-radius: 5px; 
-  box-shadow: 0 4px 10px #ccc;
-  width: 400px; 
-  max-width: 600px;
-}
-
-/* Input Area for Adding Todos */
-.input-container {
-  display: flex;
-  justify-content: space-between; 
-  align-items: center; 
-  margin-bottom: 20px; 
-}
-
-/* Todo List Styling */
-.todo-list {
-  display: flex;
-  flex-direction: column; 
-  margin-top: 10px; 
-}
-
-/* Individual Todo Item */
-.todo-item {
-  display: flex;
-  align-items: center; 
-  justify-content: space-between; 
-  padding: 10px; 
-  border-bottom: 1px solid #ddd; 
-}
-
-ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-li {
-  align-items: start;
-}
-
-.todo-item.completed {
-  text-decoration: line-through; 
-  opacity: 0.5; 
-}
-
-.todo-item input[type="checkbox"] {
-  width: 20px;
-}
-
-.input-container input, select{
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  flex-grow: 1;
-  margin-right: 10px;
-  width: 70%;
-
-}
-
-.input-container button, .todo-list button {
- 
-  padding: 10px;
-  background-color: #004C9E;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  padding: 10px 15px; 
-}
-
-.input-container button:hover, .todo-list button:hover {
-  background-color: #003B7A;
-} 
+    box-sizing: border-box;
+  }
+  
+  body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; 
+    margin: 0; 
+    font-family: Arial, sans-serif; 
+  }
 
 /* Sign out */
 header {
-  display: flex;
-  justify-content: flex-start;
-  padding: 10px;
-}
-
-.sign-out-button {
-  background-color: #932F2F; 
-  color: white; 
-  border: none;
-  padding: 10px 15px;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-}
-
-.sign-out-button:hover {
-  background-color: #5D1D1D; 
-}
-
-/* Login and Register Forms */
-.form-container {
-  max-width: 1000px;
-  margin: auto;
-  padding: 2rem;
-  border: 1px solid #ccc;
-  background-color: #f9f9f9;
-  border-radius: 5px; 
-  box-shadow: 0 4px 10px #ccc;
-}
-
-.form-container form {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.form-container input {
-  display: block;
-  margin: 0;
-  font-size: 1rem;
-  padding: 0.75rem;
-  width: 100%;
-}
-
-.form-container button {
-  cursor: pointer;
-  width: 100%;
-  background-color: #004C9E;
-  font-size: 1rem;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  padding: 0.75rem;
-}
-
-.form-container button:hover{
-  background-color: #003B7A;
-}
+    display: flex;
+    justify-content: flex-start;
+    padding: 10px;
+  }
+  
+  .sign-out-button {
+    background-color: #932F2F; 
+    color: white; 
+    border: none;
+    padding: 10px 15px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .sign-out-button:hover {
+    background-color: #5D1D1D; 
+  }
